<resources>
    <string name="app_name">Horse Racing</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="forgot_title">Forgot Password</string>
    <string name="step_email_title">Enter Email</string>
    <string name="step_otp_title">Enter OTP</string>
    <string name="step_password_title">New Password</string>
    <string name="hint_otp">Enter 6-digit OTP</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="btn_send_otp">Send OTP</string>
    <string name="btn_verify_otp">Verify OTP</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="msg_otp_sent">OTP sent to your email</string>
    <string name="msg_otp_verified">OTP verified successfully</string>
    <string name="msg_password_reset">Password reset successfully</string>
    <string name="msg_invalid_otp">Invalid OTP. Please try again</string>
    <string name="msg_new_password_mismatch">New passwords do not match</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_reset">Reset</string>
    <string name="link_register">Register</string>
    <string name="link_forgot">Forgot?</string>
    <string name="label_balance">Balance: %1$d$</string>
    <string name="label_balance_placeholder">Balance: --</string>
    <string name="label_bet">Bet amount</string>
    <string name="btn_start">Start</string>
    <string name="btn_reset_race">Reset</string>
    <string name="btn_play_again">Play Again</string>
    <string name="btn_back_lobby">Back to Lobby</string>
    <string name="horse_1">Horse 1</string>
    <string name="horse_2">Horse 2</string>
    <string name="horse_3">Horse 3</string>
    <string name="race_title">Horse Race</string>
    <string name="msg_pick_horse">Please pick a horse</string>
    <string name="msg_horse_won">Horse %1$d won!</string>
    <string name="msg_win">You win! Winner: Horse %1$d</string>
    <string name="msg_lose">You lose. Winner: Horse %1$d</string>
    <string name="msg_fill_all">Please fill all fields</string>
    <string name="msg_login_fail">Login failed</string>
    <string name="msg_register_ok">Register success</string>
    <string name="msg_register_fail">Register failed</string>
    <string name="msg_password_mismatch">Passwords do not match</string>
    <string name="msg_invalid_email">Please enter a valid email address</string>
    <string name="msg_fill_username">Please input username</string>
    <string name="msg_reset_sent">Reset instruction sent (mock)</string>
    <string name="btn_logout">Logout</string>
    <string name="msg_logout_confirm">Are you sure you want to logout?</string>
    <string name="msg_no_balance">Insufficient balance. Please add funds to continue playing.</string>
    <string name="msg_bet_exceeds_balance">Bet amount exceeds your balance. Please reduce your bet.</string>
    
    <!-- Add Funds -->
    <!-- Add Funds -->
    <string name="btn_add_funds">Add Funds</string>
    <string name="title_add_funds">Add Funds to Wallet</string>
    <string name="label_enter_amount">Enter amount to add:</string>
    <string name="hint_amount">Enter amount (e.g. 100)</string>
    <string name="btn_confirm_add">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_invalid_amount">Please enter a valid amount</string>
    <string name="msg_funds_added">Successfully added %d$ to your balance!</string>
    <string name="btn_withdraw">Withdraw</string>
    <string name="msg_insufficient_balance">Insufficient balance to withdraw!</string>
    <string name="msg_funds_withdrawn">Withdrawn %1$d VND</string>

</resources>