<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_funds"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_enter_amount"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/edit_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        android:inputType="number"
        android:textSize="18sp"
        android:padding="16dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="32dp"/>
    <Button
        android:id="@+id/btn_view_deposit_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="View Deposit History"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_confirm_add"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:background="@android:color/holo_green_light"
            android:textColor="@android:color/white"/>

    </LinearLayout>



</LinearLayout>
